--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,1 +1,11 @@
-$color-primary: #20232a;
+$color-primary: #000000;
+$color-secondary:  #d63031;
+$navbar-height: 72px;
+$icon-white: #ffffff;
+$logo-font: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", 'Noto Color Emoji' !default;
+$header-font-size: 4.25rem;
+$section-header-font-size: 2.5rem;
+$divider-border-radius: 60px;
+$divider-width: 20rem;
+$button-border-radius: 20px;
+$input-placeholder-color: #000000;
