--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,3 +3,10 @@
 
 @import "layout";
 @import "navbar";
+@import "masthead";
+@import "aboutsection";
+@import "classes";
+@import "global";
+@import "pricing";
+@import "aboutpage";
+@import "signupform";
