--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,6 +1,9 @@
 div.main {
   min-height: 100vh;
   padding-bottom: 60px;
+  padding: 0;
+  margin: 0;
+  overflow-x: hidden;
 }
 
 div.full-height {
@@ -13,26 +16,43 @@ a.link-no-style {
   }
 }
 
-.footer-col {
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  align-items: center;
-  footer {
-    display: flex;
-    position: relative;
-    bottom: 0;
-    margin-top: -60px;
-    height: 60px;
-    clear: both;
-    background-color: $color-primary;
-    color: white;
-    justify-content: center;
-    width: 100%;
+.footer {
+  padding: 0;
+  margin: 0;
 
-    span {
-      align-self: center;
-      text-align: center;
+  .footer-col {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    
+    footer {
+      display: flex;
+      position: relative;
+      bottom: 0;
+      height: 60px;
+      clear: both;
+      background-color: $color-primary;
+      color: white;
+      justify-content: center;
+      width: 100%;
+    
+  
+      span {
+        align-self: center;
+        text-align: center;
+      }
     }
   }
 }
+
+  
+
+
+
+
+
+.btn-style {
+  border-radius: $button-border-radius;
+}
+
